[package]
name = "moo"
version = "0.1.1"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"
description = "Unsarcastically [sic] adds `fn moo(&self)` to `Cow`"
readme = "README.md"
documentation = "http://docs.rs/moo"
repository = "https://github.com/sgrif/moo.git"

[dependencies]
